--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <link href="/Contents/themes/bootstrap.css"rel="stylesheet"/>
     <script src="/Scripts/bootstrap.js"></script>
     <script src="/Scripts/jquery-2.1.3.min.js"></script>
+    
   <style>
      .form-control {
     border-radius: 20px;
@@ -53,7 +54,7 @@ label
 
     }
       </style>
-    
+    @RenderSection("s1",required:false)
 
 
 </head>
@@ -155,5 +156,6 @@ label
                 </div>
 
         </div>
+    
     </body>
     </html>
