--- a/Views/buy/buy.cshtml
+++ b/Views/buy/buy.cshtml
@@ -22,7 +22,7 @@
                  {
                     <div class="col-md-3" style="border:solid;margin-left:5%;margin-top:5%; border-color:#1c8787">
                     <form action="/buy/addcart/@x.Itemid" method="post">
-                            <img src="/Images/6915d6323413fa55a8d7bcb45246ebcd.image.229x182.jpg" />
+                            <img src="/Files/@x.filename" />
                             <p>@x.Iname</p>
                             <p>@x.Iprice RS </p>
                              
