--- a/Views/signup/signup.cshtml
+++ b/Views/signup/signup.cshtml
@@ -9,6 +9,10 @@
     
 }
 
+@section s1
+{
+    <script  src="/Scripts/jquery-2.1.3.min.js"></script>
+}
     
     <!-- nav bar is coompleted here-->
     <div class="container" style="margin-bottom:20px">
@@ -24,12 +28,45 @@
             <P style="color:#808080">
                 @Html.Label("User Name")
                 </p>
-                @Html.TextBoxFor(x => x.uname,new {@class="form-control input-sm chat-input" })
+                @Html.TextBoxFor(x => x.uname,new {id="t1",@class="form-control input-sm chat-input" })                        
+
+                        <p id='e1' style="color:red"></p>    
            
                 <br/>
             <p style="color:#808080">@Html.Label("Password")</p>
-                        @Html.TextBoxFor(x => x.pwd,new {@class="form-control input-sm chat-input", type="password"})
-                
+                        @Html.TextBoxFor(x => x.pwd,new {id="t2",@class="form-control input-sm chat-input", type="password"})
+                <script>
+                    $("#t1").on('mouseover', f2);
+                    function f2() {
+                        
+                       
+                        $("#e1").text("");
+                    }
+                    $("#t2").on('mouseover',f1);
+                    function f1() {
+                        var check = true;
+                        var name=$("#t1").val();
+                        $.getJSON("/signup/getusername", function (data) {
+
+
+                            var i;
+                            for (i = 0; i < data.length; i++) {
+ 
+                                 if (data[i]==name) {
+                                     check = false;
+                                 }
+ 
+ 
+                             }
+                            if (check == false) {
+                                $("#e1").text("user name already in use");
+                            }
+
+
+                        });
+                       
+                    }
+                </script>
             <br/>
                 <p style="color:#808080">@Html.Label("Confirm Password")</p>
                 @Html.TextBoxFor(x=>x.pwd,new { @class="form-control input-sm chat-input",type="password"})
@@ -42,7 +79,7 @@
                 
             <P>or @Html.ActionLink("LOGIN", "login", "login", new { style="color:#1c8787;font:bold"},null)
             <input id="b1" type="submit" value="CREAT ACCOUNT" style="background-color:#1c8787; color:white;margin-left:50%"/>
-
+               
 
             </p>
 
@@ -61,11 +98,6 @@
         </div>
     <!-- page footer -->
  
-    
-
-
-
-
 
 
    
