adding fancy box

--- a/Views/home/index.cshtml
+++ b/Views/home/index.cshtml
@@ -66,7 +66,7 @@ Fill the form and we'll get in touch if your submission gets published</p>
                 <p>The community of Arduino enthusiasts is vast, and includes region specific groups and special interest groups.
 The official multi-language Forum is the place to start with questions of all kinds. Check out the Playground for a collection of Arduino knowledge, tutorials, and instructions provided directly by Arduino users.</p>
       <h2>TALK TO US</h2>
-            <p>You can <a href="contactus.html">Contact us</a> to get answers to your comments and concerns. </p>
+            <p>You can <a href="/contactus/contactus">Contact us</a> to get answers to your comments and concerns. </p>
         </div>
        </div>
        
