--- a/Views/signup/resetpassword.cshtml
+++ b/Views/signup/resetpassword.cshtml
@@ -24,14 +24,15 @@
                                     @Html.Label("User Name")
                                     </p>
                                     @Html.TextBoxFor(x => x.uname,new {@class="form-control input-sm chat-input" })
+                             @Html.ValidationMessageFor(x=>x.uname)
            
                                     <br/>
                                 <p style="color:#808080">@Html.Label("Old Password")</p>
                                             @Html.TextBoxFor(x => x.pwd,new {@class="form-control input-sm chat-input", type="password"})
-                
+                @Html.ValidationMessageFor(x=>x.pwd)
                                 <br/>
                                     <p style="color:#808080">@Html.Label("New Password")</p>
-                                    
+                                    @Html.ValidationMessageFor(x=>x.pwd)
                                     
                              <input type="password" name="cpwd"class="form-control input-sm chat-input"/>
                              
