--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,8 +4,17 @@
 <head>
     <title>@ViewBag.title</title>
     <link href="/Contents/themes/bootstrap.css"rel="stylesheet"/>
+     <link href="/Contents/themes/StyleSheet.css" rel="stylesheet" />
+    <link href="/Scripts/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" rel="stylesheet" />
     <script src="/Scripts/bootstrap.js"></script>
     <script src="/Scripts/jquery-2.1.3.min.js"></script>
+    <script src="/Scripts/jquery-1.7.1.js"></script>
+    <script src="/Scripts/jquery.validate.js"></script>
+    <script src="/Scripts/jquery.validate.unobtrusive.js"></script>
+    <script src="/Scripts/fancybox/source/jquery.fancybox.pack.js"></script>
+   
+
+
     
   <style>
      .form-control {
@@ -63,43 +72,81 @@ label
         
         <div  style="margin-left:300px;">
             <img src="/images/logo_w_100.png" style="height:9%;width:9% ; margin-bottom:5%;margin-top:5%" />
-               
-        </div>
+              <div class="pull-right" style="margin-right:30px;margin-top:130px">
+            
+            
+                
+                <input id="s2"  type ="text" class="form-control" placeholder="Serach Arduino Items" />
+                  <script>
+                      $(document).ready(function () {
 
-        <div class="pull-right">
-            <form class="navbar-form navar-left" role="search">
-            <div class="form-group" >
-                <input type="text" class="form-control" placeholder="Search the Arduino"/>
-               
+                          $("#s2").change(f1);
+                          function f1() {
+
+                              var value = $("#s2").val();
+                              if (value == "boards") {
+                                  $.getJSON("/signup/getitem", function (data) {
+                                      var i;
+                                      for (i = 0; i < data.length; i++) {
+                                          $("#start").prepend("<p>" + data[i] + "</p>");
+                                      }
+
+
+                                  });
+                              }
+                          }
+
+
+                      });
+                </script>
+                
+              
                 
             </div>
            
-
-            </form>
+               
         </div>
+
+      
+
+           
+       
             
-         <div class="pull-right">
+         <div class="pull-right" style="margin-right:30px;">
+            
              
                             @{
                     var n=Session["name"] as string;
                     if(n!=null)
                     {
                         
-                      <ul class="nav navbar-nav ">
+                      <ul id="u1" class="nav navbar-nav ">
                            <li> <a href="/login/logout" style="color:white;font:bold;">Logout</a></li>
                    <a id="a1" href="/cart/cart"><img id="I1" src="/Images/cart.png" /></a>
+                           
                       </ul>   
-                  
-                  
+                                
+              
+                  <script>
+                     $(document).ready(function () {
+                         $("#a3").remove();
+                         $("#a4").remove();
+
+                     });
+                     
+                 </script>
+                              
                                    
                  
+                    }
+                
                 }
-                }
+                       
                  
         </div>
           
         
-            <div class="pull-right">
+            <div class="pull-right" style="margin-right:20px">
                 
             <ul class=" nav navbar-nav">
 
@@ -108,27 +155,34 @@ label
                 <li ><a href="/buy/buy" style="color:white;font:bold">Buy</a></li>
                 <li ><a href="/blog/blog" style="color:white;font:bold">Blog</a></li>
                 <li ><a href="/contactus/contactus" style="color:white;font:bold">Contact Us</a></li>
-                
-                <li ><a href="/login/login" style="color:white;font:bold">LogIn</a></li>
-                <li ><a href="/signup/signup" style="color:white;font:bold">SignUp</a></li>
+               
+                <li ><a id="a3" href="/login/login" style="color:white;font:bold">LogIn</a></li>
+                <li ><a  id="a4" href="/signup/signup" style="color:white;font:bold">SignUp</a></li>
                          
-                         
+               
    
 
                
                
                 
                   </ul>
-              
+                             
              
         </div>
        
        
          
     </nav>
-    <div>
-        
-       
+    <div  id="start">
+
+    </div>
+    <div >
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $(".fancybox").fancybox();
+            });
+</script>
+       <a href="/Images/images (1).jpg"><img src="/Images/images (1).jpg" width="350" height="233"></a>
         @RenderBody();
     </div>
     <div class="modal-footer" id="i1" style="margin-top:5%;background-image:url(/images/nav_big.png)">
