--- a/Views/buy/buy.cshtml
+++ b/Views/buy/buy.cshtml
@@ -22,7 +22,8 @@
                  {
                     <div class="col-md-3" style="border:solid;margin-left:5%;margin-top:5%; border-color:#1c8787">
                     <form action="/buy/addcart/@x.Itemid" method="post">
-                            <img src="/Files/@x.filename" />
+                        <a href="/Files/@x.filename"><img src="/Files/@x.filename" width="228" height="184"></a>
+                            
                             <p>@x.Iname</p>
                             <p>@x.Iprice RS </p>
                              
